--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@ timezone: EST
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy                          # the main title
+title: Iapetus J. D.                         # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: CISA | CRISC | CISSP | Systems | Risk Management | Security  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
@@ -30,20 +30,16 @@ description: >-                        # used by seo meta and the atom feed
 url: 'https://exploot.github.io'
 
 github:
-  username: github_username             # change to your github username
-
-twitter:
-  username: twitter_username            # change to your twitter username
+  username: exploot             # change to your github username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com             # change to your email address
+  name: Iapetus J. D
+  email: dubberexploit@gmail.com            # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://github.com/exploot      # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -81,7 +77,7 @@ theme_mode:   # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://artmuselondon.files.wordpress.com/2021/05/blake1.jpg
 
 # boolean type, the global switch for ToC in posts.
 toc: true
