--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ title: Iapetus J. D.                         # the main title
 tagline: CISA | CRISC | CISSP | Systems | Risk Management | Security  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
+  My website. Serves as a portfolio but also as a blog.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://exploot.github.io'
