--- a/_config.yml
+++ b/_config.yml
@@ -80,10 +80,10 @@ img_cdn:
 avatar: https://artmuselondon.files.wordpress.com/2021/05/blake1.jpg
 
 # boolean type, the global switch for ToC in posts.
-toc: true
+toc: 1
 
 comments:
-  active:         # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  active: # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   disqus:
     shortname:    # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
