--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,5 +1,9 @@
 <author_id>:
   name: <exploot>
+  twitter: 
+  url: <https://exploot.github.io/>
 
 <author_id>:
-  name: <Iapetus J.D.>
+  name: <Iapetus J. D.>
+  twitter: <@GoddessCameo>
+  url: <https://exploot.github.io/>
